<resources>

    <string name="app_name">Budget</string>

    <!-- Main Activity-->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_incomes">Einnahmen</string>
    <string name="title_loss">Ausgaben</string>
    <string name="title_categories">Kategorien</string>
    <string name="title_vendors">Händler</string>
    <string name="title_logout">Logout</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Off-Canvas Menü -->
    <string-array name="sections">
        <item>Dashboard</item>
        <item>Einnahmen</item>
        <item>Ausgaben</item>
        <item>Kategorien</item>
        <item>Händler</item>
        <item>Logout</item>
    </string-array>

    <string-array name="section_titles">
        <item>Dashboard</item>
        <item>Einnahmen</item>
        <item>Ausgaben</item>
        <item>Kategorien</item>
        <item>Händler</item>
        <item>Logout</item>
    </string-array>

    <string-array name="sections_icons">
        <item>@drawable/ic_dashboard_w</item>
        <item>@drawable/ic_income_w</item>
        <item>@drawable/ic_basket_w</item>
        <item>@drawable/ic_category_w</item>
        <item>@drawable/ic_vendor_w</item>
        <item>@drawable/ic_logout_w</item>
    </string-array>

    <!-- Labels -->
    <string name="notice">Notiz</string>
    <string name="name">Name</string>
    <string name="type">Typ</string>
    <string name="address">Anschrift</string>
    <string name="amount">Wert</string>
    <string name="quantity">Anzahl</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>

    <!-- Dashboard Activity -->
    <string name="period">Einnahmen/Ausgaben der letzten 365 Tage</string>

    <!-- Register Activity -->
    <string name="title_activity_register">Register</string>
    <string name="email">E-Mail</string>
    <string name="register">Registrieren</string>

    <!-- Loss Activity -->
    <string name="title_activity_loss">Ausgabe</string>
    <string name="loss_name">Name</string>
    <string name="loss_value">Wert</string>
    <string name="loss_date">Datum</string>
    <string name="article_name">Artikel Name</string>
    <string name="article_amount">1 x </string>
    <string name="article_value">5 €</string>
    <string name="article_name_missing">Bitte Artikel Namen eingeben!</string>

    <!-- Income Activity -->
    <string name="title_activity_income">Einnahme</string>
    <string name="income_name">Name</string>
    <string name="income_amount">Wert</string>
    <string name="income_quantity">Anzahl</string>
    <string name="income_new">0</string>
    <string name="income_date">Datum</string>

    <!-- Vendor Activity -->
    <string name="title_activity_vendor">Händler</string>
    <string name="vendor_name">Händler</string>
    <string name="vendor_street">Straße</string>
    <string name="vendor_nr">Nr</string>
    <string name="vendor_plz">PLZ</string>
    <string name="vendor_city">Stadt</string>
    <string name="vendor_new">0</string>

    <!-- Category Activity -->
    <string name="title_activity_category">Kategorie</string>
    <string name="category_name">Kategorie</string>
    <string name="category_type">Typ</string>
    <string name="category_new">0</string>

    <!-- Radio Buttons -->
    <string name="rb_income">Einnahme</string>
    <string name="rb_loss">Ausgabe</string>

    <!-- Buttons -->
    <string name="action_loss">Neue Ausgabe</string>
    <string name="action_income">Neue Einnahme</string>
    <string name="action_category">Neue Kategorie</string>
    <string name="action_vendor">Neuer Händler</string>
    <string name="action_sync">Synchronisieren</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Speichern</string>
    <string name="action_delete">Löschen</string>


    <!-- Sonstiges -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_list_view_loader">ListViewLoader</string>


    <!-- Preferences -->
    <string name="title_activity_preferences">Einstellungen</string>
    <string name="account">Account</string>
    <string name="usernameSummary">Username eintragen</string>
    <string name="passwordSummary">Passwort eintragen</string>
    <string name="payments">Zahlungsarten</string>
    <string name="paymentsSummary">Girokarte, Kreditkarte, Barzahlung</string>
    <string name="paymentsCash">Barzahlung</string>
    <string name="paymentsGiro">Girokonto</string>
    <string name="paymentsCredit">Kreditkarte</string>
    <string name="paymentsNumberGiro">Girokontonummer eintragen</string>
    <string name="paymentsBicGiro">BIC eintragen</string>
    <string name="paymentsNumberCredit">Kreditkartenummer eintragen</string>

    <!-- Sync Activity -->
    <string-array name="quotes">
        <item>We\'re all in this together.</item>
        <item>Be cool. But also be warm.</item>
        <item>What good shall I do today?</item>
        <item>You look nice today.</item>
        <item>Remember to get up and stretch once in a while.</item>
        <item>Allright world, time to take you on!</item>
        <item>We like you.</item>
        <item>Always get a plenty of sleep, if you can.</item>
        <item>Your\'re here! The day just got better.</item>
        <item>Sometimes you eat the bear and sometimes\n the bear, well, he eats you.</item>
        <item>Doesn\’t expecting the unexpected\nmake the unexpected expected?</item>
    </string-array>
    <string name="title_activity_sync">Syncing...</string>


    <!-- Error Messages -->
    <string name="network_missing_error">Keine Netzwerkverbindung! :(!</string>
    <string name="required_fields_missing_error">Bitte alle Felder ausfüllen!</string>
    <string name="login_missing_error">Fehlende Logindaten bitte in den Einstellungen eintragen!</string>

</resources>
