<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/account"
            android:key="pref_key_user_settings">
            <EditTextPreference android:key="username"
                android:summary="@string/usernameSummary"
                android:title="@string/username"/>
            <EditTextPreference android:key="password"
                android:summary="@string/passwordSummary"
                android:title="@string/password"
                android:password="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="payments"
        android:title="@string/payments"
        android:summary="@string/paymentsSummary">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="paymentsCash"
                android:title="@string/paymentsCash" />
        <PreferenceScreen
            android:key="paymentsGiro"
            android:title="@string/paymentsGiro" >
            <EditTextPreference android:key="paymentsIdCash"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="paymentsActiveGiro"
                android:title="@string/paymentsGiro" />
            <EditTextPreference android:key="paymentsNumberGiro"
                android:title="@string/paymentsNumberGiro"/>
            <EditTextPreference android:key="paymentsBicGiro"
                android:title="@string/paymentsBicGiro"/>
            <EditTextPreference android:key="paymentsIdGiro" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="paymentsCredit"
            android:title="@string/paymentsCredit" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="paymentsActiveCredit"
                android:title="@string/paymentsCredit" />
            <EditTextPreference android:key="paymentsNumberCredit"
                android:title="@string/paymentsNumberCredit"/>
            <EditTextPreference android:key="paymentsIdCredit" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
