<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.budget.BudgetAndroid.Categories.CategoryActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/label_category_name" />

        <EditText
            android:id="@+id/category_name"
            android:hint="@string/category_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            style="@style/EditTextBasic" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/type"
            android:id="@+id/label_category_type" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/spinner3"
            android:orientation="horizontal"
            android:id="@+id/category_type">

            <RadioButton
                android:text="@string/rb_income"
                android:id="@+id/rb_category_income"
                style="@style/rb"/>

            <RadioButton
                android:text="@string/rb_loss"
                android:id="@+id/rb_category_loss"
                style="@style/rb" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/label_category_id"
            android:text="@string/category_new"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notice"
            android:id="@+id/label_category_notice"
            android:layout_below="@+id/rb_group"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/category_notice"
            android:layout_below="@+id/category_notice" />

    </LinearLayout>

    <ImageButton
        android:src="@drawable/button"
        android:id="@+id/imageButton"
        android:onClick="save"
        style="@style/fab" />



</RelativeLayout>
