<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.budget.BudgetAndroid.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:src="@drawable/budget_intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/budget_euro"
        android:src="@drawable/euro"
        android:layout_gravity="center_horizontal|top"
        android:visibility="visible"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignStart="@+id/textView" />

    <EditText
        style="@style/EditTextBasic"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/EditTextBasic"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textColor="@color/ColorPrimary"
        android:elegantTextHeight="false"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:textSize="32dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="login"
        android:background="@color/ColorPrimary"
        android:layout_above="@+id/register"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:onClick="register"
        android:background="@color/ColorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
