<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.budget.BudgetAndroid.Vendors.VendorNew"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        style="@style/EditTextBasic"
        android:id="@+id/vendor_name"
        android:hint="@string/vendor_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <EditText
        style="@style/EditTextBasic"
        android:id="@+id/vendor_address"
        android:hint="@string/vendor_address"
        android:layout_below="@+id/vendor_name"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vendor_address"
        android:id="@+id/spinner3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner3"
        android:layout_centerHorizontal="true">

        <RadioButton
            style="@style/rb"
            android:text="@string/rb_income"
            android:id="@+id/rb_vendor_income" />

        <RadioButton
            style="@style/rb"
            android:text="@string/rb_loss"
            android:id="@+id/rb_vendor_loss" />

    </RadioGroup>

    </LinearLayout>

    <ImageButton
        android:src="@drawable/button"
        android:id="@+id/imageButton"
        android:onClick="save"
        style="@style/fab" />



</RelativeLayout>
