<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.budget.BudgetAndroid.Vendors.VendorActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="51dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/label_vendor_name"
            android:textColor="@color/ColorPrimaryDark"
            />

        <EditText
        style="@style/EditTextBasic"
        android:id="@+id/vendor_name"
        android:hint="@string/vendor_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
 />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/address"
            android:id="@+id/label_vendor_address"
            android:textColor="@color/ColorPrimaryDark"
            />

    <EditText
        style="@style/EditTextBasic"
        android:id="@+id/vendor_address"
        android:hint="@string/vendor_address"
        android:layout_below="@+id/vendor_name"
        android:layout_alignParentStart="true" />



    </LinearLayout>

    <ImageButton
        android:src="@drawable/button"
        android:id="@+id/imageButton"
        android:onClick="save"
        style="@style/fab" />



</RelativeLayout>
